syntax = "proto3";

package bidi;

// A basic message
message HelloRequest {
  string name = 1;
}

// The response
message HelloReply {
  string message = 1;
}

// The greeting service definition.
service Hello {
  rpc SayHello (stream HelloRequest) returns (stream HelloReply) {}
}
